--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,19 @@
                                      survive the virtual zombie attack!</string>
     <string name="getting_started_3">To start playing, tap play and register an account.</string>
     <string name="next_button">NEXT</string>
+    <string name="title_activity_register">Register Activity</string>
     //How To Play Page / Learn To Play
+
+
+    //RegisterActivity Strings
+    <string name="firstName">First Name</string>
+    <string name="lastName">Last Name</string>
+    <string name="emailAddress">Email Address</string>
+    <string name="userName">User Name</string>
+    <string name="password">Password</string>
+    <string name="gender">Gender</string>
+    <string name="dateOfBirth">Date of Birth</string>
+
+
+
 </resources>
