--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,10 +39,5 @@
 
     <string name="registerSuccess">Register Successful!</string>
     <string name="registerSuccessPrompt1">Your Registration has been completed</string>
-    <string name="registerSuccessPrompt2">Thanks for registering with the Running Dead App</string>
-
-
-
-
-
+    <string name="registerSuccessPrompt3">Thanks for registering with Running Dead!</string>
 </resources>
