--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
  <resources>
     <string name="app_name">Running Dead</string>
-
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_play_map">Running Dead</string>
@@ -10,36 +9,31 @@
      <!-- How to Play How to Play-->
     <string name="title_activity_how_to_play">How To Play</string>
     <string name="how_to_play">HOW TO PLAY</string>
-    <string name="getting_started_1">GETTING STARTED</string>
+    <string name="getting_started_1"><u>GETTING STARTED</u></string>
     <string name="getting_started_2">Running Dead is a fitness application that forces you to exercise to
-                                     survive the virtual zombie attack!\n\nTo start playing, tap play and register an account.</string>
+        survive the virtual zombie attack!<!--new line-->\n\n<!--new line-->To start
+        playing, tap play and register an account.</string>
     <string name="next_button">NEXT</string>
 
      <!-- How to Play Learning to Play-->
-    <string name="title_activity_learn_to_play">Learn To Play</string>
-    <string name="learn_to_play">HOW TO PLAY</string>
-     <string name="learning_1"><u>LEARNING TO PLAY</u></string>
-    <string name="learning_2">Login to Running Dead</string>
-    <string name="learning_3">To Play, Enable the GPS function on your phone and tap Play.</string>
-    <string name="learning_4">You are now viewing the Map, tap the Centre Location button in the top right hand corner and
-       the screen will now centre to your current location.</string>
-    <string name="learning_5">In this game you will need to accumulate points for the distances you cover.</string>
-    <string name="next_button2">NEXT</string>
+    <string name="learning_1"><u>LEARNING TO PLAY</u></string>
+    <string name="learning_2">Login to Running Dead<!--new line-->\n\nTo Play,
+        Enable the GPS function on your phone and tap Play.<!--new line-->\n\n<!--new line-->You
+        are now viewing the Map, tap the Centre Location button in the top right hand corner and
+        the screen will now centre to your current location.<!--new line-->\n\n<!--new line-->In
+        this game you will need to accumulate points for the distances you cover.</string>
 
     <!-- How to Play Learning to Play-->
-    <string name="title_activity_playing_the_game">Playing The Game</string>
-    <string name="playing_the_game">HOW TO PLAY</string>
-    <string name="playing_1">PLAYING THE GAME</string>
-    <string name="playing_2">Zombies will now spawn around your Immediate Location, The objective of the game is to avoid these zombies while trying to reach the Finish Line</string>
-    <string name="playing_3">In this game you will need to accumulate points for the distances you cover, Try to get as far as you can!</string>
-    <string name="playing_4">Support for Multi-player Coming Soon!</string>
-    <string name="playing_5">It is time to start Playing!</string>
-    <string name="next_button3">BACK TO MENU</string>
-
-
+    <string name="playing_1"><u>PLAYING THE GAME</u></string>
+    <string name="playing_2">Zombies will now spawn around your Immediate Location,
+        The objective of the game is to avoid these zombies while trying to reach
+        the Finish Line.<!--new line-->\n\n<!--new line-->In
+        this game you will need to accumulate points for the distances you cover,
+        Try to get as far as you can!
+        <!--new line-->\n\n<!--new line-->\t\t\t\t\t\t\tIt is time to start Playing!</string>g>
+     <string name="backToMain">Back to MainMenu</string>
 
     <!-- RegisterActivity Strings-->
-
     <string name="title_activity_register">Register Activity</string>
     <string name="registerScreen">Register Screen</string>
     <string name="registerScreenPrompt1">Welcome to the register Screen</string>
