--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,11 @@
     <string name="gender">Gender</string>
     <string name="dateOfBirth">Date of Birth</string>
     <string name="done_button">DONE</string>
+    <string-array name="Gender">
+         <item>Male</item>
+         <item>Female</item>
+         <item>Zombie</item>
+    </string-array>
 
 
     <!-- RegisterSuccessful Strings/Variables-->
